# voicemcu

./: .gitignore  LICENSE  README.md  SECURITY.md
client/: Cargo.toml
client/src/: audio_io.rs  config.rs  main.rs  tui.rs
common/: Cargo.toml
common/src/: audio.rs  codec.rs  error.rs  jitter.rs  lib.rs  protocol.rs
server/: Cargo.toml
server/src/: config.rs  main.rs  room.rs  tls.rs
