[package]
name = "voicemcu-common"
version = "0.1.0"
edition = "2024"

[dependencies]
audiopus = "0.2"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "rt", "macros"] }
