[package]
name = "voicemcu-server"
version = "0.1.0"
edition = "2024"

[dependencies]
voicemcu-common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
quinn = "0.11"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
bytes = "1"
ring = "0.17"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
